[gd_scene load_steps=8 format=2]

[ext_resource path="res://titleScreen/titleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/playBtn.png" type="Texture" id=2]
[ext_resource path="res://assets/exitBtn.png" type="Texture" id=3]
[ext_resource path="res://assets/starDestroyer.png" type="Texture" id=4]
[ext_resource path="res://assets/Sounds/title.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Sounds/guiClick.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/Sounds/guiExitClick.wav" type="AudioStream" id=7]

[node name="titleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="cam" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="playBtn" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = 18.5
margin_right = 187.0
margin_bottom = 127.5
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitBtn" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = 120.5
margin_right = 187.0
margin_bottom = 229.5
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -403.947
margin_top = -202.644
margin_right = -104.947
margin_bottom = -150.644
rect_scale = Vector2( 2.7425, 2.7425 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="guiExit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="guiClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="gui_input" from="CanvasLayer/playBtn" to="." method="_on_playBtn_gui_input"]
[connection signal="gui_input" from="CanvasLayer/exitBtn" to="." method="_on_exitBtn_gui_input"]
[connection signal="finished" from="guiExit" to="." method="_on_guiExit_finished"]
